# pg-hpx

./: .cmake-format.py  AGENT.md  AGENTS.md  CMakeLists.txt
.githooks/: pre-commit
.github/workflows/: build-and-test.yml  codeql.yml  linux_debug.yml  linux_debug_fetch_boost.yml  linux_release_clang_p2996_reflection.yml  linux_release_gcc_trunk_reflection.yml  linux_release_modules.yml  macos_debug.yml  macos_debug_fetch_boost.yml  macos_debug_fetch_hwloc.yml  windows_clang_debug.yml  windows_clang_release.yml  windows_debug_vs2022.yml  windows_debug_vs2022_fetch_boost.yml  windows_debug_vs2022_fetch_hwloc.yml  windows_debug_vs2022_local_runtime.yml  windows_debug_vs2022_modules.yml  windows_debug_vs2022_tracy.yml  windows_release_2022.yml  windows_release_gcc_mingw.yml  windows_release_static.yml
.jenkins/lsu-perftests/: batch.sh  comment_github.sh  launch_perftests.sh
.jenkins/lsu-test-coverage/: batch.sh
cmake/: HPX_AddTest.cmake  HPX_CollectStdHeaders.cmake  HPX_SetupGitHooks.cmake
cmake/templates/: hpxrun.py.in
docs/design/: run-loop-bridging.md
docs/sphinx/api/: public_api.rst
docs/sphinx/manual/: migration_guide.rst
examples/: CMakeLists.txt
examples/quickstart/: 1d_wave_equation.cpp
examples/task_bench/: CMakeLists.txt
libs/core/algorithms/: CMakeLists.txt
libs/core/assertion/tests/unit/: CMakeLists.txt  assert_fail.cpp
libs/core/async_base/src/: launch_policy.cpp
libs/core/async_base/tests/unit/: launch_policy.cpp
libs/core/async_cuda/tests/unit/: transform_stream.cu
libs/core/async_mpi/tests/unit/: algorithm_transform_mpi.cpp
libs/core/command_line_handling_local/src/: command_line_handling_local.cpp  parse_command_line_local.cpp
libs/core/contracts/src/: violation_handler.cpp
libs/core/contracts/tests/unit/: CMakeLists.txt  declaration_contracts_fail_contract_assert.cpp
libs/core/coroutines/src/detail/: coroutine_impl.cpp
libs/core/coroutines/tests/unit/: CMakeLists.txt  thread_id_type.cpp
libs/core/datastructures/: CMakeLists.txt
libs/core/datastructures/tests/unit/: CMakeLists.txt  forward_list.cpp  tuple.cpp
libs/core/execution/: CMakeLists.txt
libs/core/execution/tests/performance/: CMakeLists.txt  benchmark_continues_on.cpp  future_boundary.cpp  future_sender_bridge.cpp
libs/core/execution/tests/unit/: CMakeLists.txt  algorithm_bulk.cpp  algorithm_ensure_started.cpp  algorithm_run_loop.cpp  forward_progress_guarantee.cpp  forwarding_env_query.cpp  forwarding_scheduler_query.cpp  forwarding_sender_query.cpp  future_sender_test.cpp  rebind_executor_parameters.cpp
libs/core/execution_base/: CMakeLists.txt
libs/core/execution_base/src/: agent_ref.cpp  this_thread.cpp
libs/core/execution_base/tests/include/: algorithm_test_utils.hpp  coroutine_task.hpp
libs/core/execution_base/tests/unit/: CMakeLists.txt  any_sender.cpp  basic_operation_state.cpp  basic_schedule.cpp  basic_sender.cpp  completion_signatures.cpp  coroutine_utils.cpp  execution_context.cpp
libs/core/executors/tests/unit/: thread_pool_scheduler.cpp
libs/core/functional/src/: basic_function.cpp
libs/core/functional/tests/regressions/: is_callable_1179.cpp
libs/core/futures/: CMakeLists.txt
libs/core/futures/src/: future_data.cpp
libs/core/init_runtime_local/src/: init_runtime_local.cpp
libs/core/properties/: CMakeLists.txt
libs/core/resource_partitioner/src/: detail_partitioner.cpp
libs/core/thread_pools/: CMakeLists.txt
libs/core/thread_pools/src/: scheduled_thread_pool.cpp
libs/core/thread_support/: CMakeLists.txt
libs/core/thread_support/src/: spinlock.cpp  win_nanosleep.cpp
libs/core/threading/src/: thread.cpp
libs/core/threading_base/src/: create_thread.cpp  execution_agent.cpp  set_thread_state.cpp  thread_data.cpp  thread_helpers.cpp
libs/core/threadmanager/src/: threadmanager.cpp
libs/core/tracy/src/: tracy.cpp  tracy_tls.cpp
libs/full/agas/src/: addressing_service.cpp
libs/full/async_distributed/: CMakeLists.txt
libs/full/collectives/: CMakeLists.txt
libs/full/collectives/docs/: index.rst
libs/full/collectives/src/: barrier.cpp  create_communicator.cpp
libs/full/init_runtime/src/: hpx_init.cpp
libs/full/runtime_distributed/src/: big_boot_barrier.cpp
perf-baselines/: README.md  results-2026-05-05-master-2e0fcc1.md
perf-baselines/raw/: async_overheads.run1.txt  async_overheads.run2.txt  async_overheads.run3.txt  async_overheads.run4.txt  async_overheads.run5.txt  foreach_scaling.run1.txt  foreach_scaling.run2.txt  foreach_scaling.run3.txt  foreach_scaling.run4.txt  foreach_scaling.run5.txt  future_overhead.run1.txt  future_overhead.run2.txt  future_overhead.run3.txt  future_overhead.run4.txt  future_overhead.run5.txt
tests/performance/local/: future_overhead.cpp
tools/: add_compat_headers.sh  build_boost.sh  check_module_cmakelists.sh  pre-commit
(+293 files in other folders)
